--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,5 +1,8 @@
 version: 0.1
-
+env:
+  variables:
+    APP_ID: "idb"
+    GH_BRANCH: ${CURRENT_BRANCH}
 phases:
   install:
     commands:
@@ -15,6 +18,8 @@ phases:
     commands:
       # - echo testing...
       # - echo building...
+      - echo "APP_ID is $APP_ID"
+      - echo "GH_BRANCH is $GH_BRANCH"
       - ng build --prod
   post_build:
     commands:
