--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,6 +18,8 @@ phases:
       # - echo testing...
       # - echo building...
       - echo APP_ID is ${APP_ID}
+      - echo ${CODEBUILD_SOURCE_VERSION}
+      - echo ${CODEBUILD_WEBHOOK_TRIGGER}
       - echo GH_BRANCH is ${BRANCH_NAME}
       - ng build --prod
   post_build:
